tekton/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: wind-turbine
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
  name: el-wind-turbine
spec:
  host: el-wind-turbine-demo.infusion.dev
  path: /
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-wind-turbine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
